egressgateway-originate-tls/control-plane/templates/manifest.yaml
---
# Source: control-plane/templates/route-api.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api
spec:
  port:
    targetPort: http2
  tls:
    termination: edge
  to:
    kind: Service
    name: custom-ingressgateway
    weight: 100
  wildcardPolicy: None
